# B216-Rob1-miniproject

./: CMakeLists.txt  README.md  package.xml
launch/: pianobot.launch
src/: dection_node.cpp  detection_node.cpp  subscriber_node.cpp
