<package>
  <!-- Package Metadata -->
  <name>pianobot</name>
  <maintainer email="oeth16@student.aau.dk">Oliver Emil Trudslev Hansen</maintainer>
  <description>
    Code to make a turtlebot play piano sounds depending on camera distance by group B216
  </description>
  <version>0.1.0</version>
  <license>BSD</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package Dependencies -->
 <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>image_transport</build_depend>
  
 <run_depend>roscpp</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>image_transport</run_depend>

</package>	
